@@ -27,7 +27,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 
-import static fr.insalyon.creatis.vip.core.client.CoreModule.user;
+// import static fr.insalyon.creatis.vip.core.client.CoreModule.user;
 
 @Service
 @Transactional
@@ -79,10 +79,10 @@ public class WorkflowLaunchBusiness extends CommonBusiness {
                 Double start = Double.parseDouble(values[0]);
                 Double stop = Double.parseDouble(values[1]);
                 Double step = Double.parseDouble(values[2]);
-                inputsMap.put(inputName, WorkflowInput.ofinterval(List.of(start,stop,step)));
+                inputsMap.put(inputName, WorkflowInput.ofinterval(List.of(start, stop, step)));
             } else if (valuesStr.contains(ApplicationConstants.SEPARATOR_LIST)) {
                 String[] values = valuesStr.split(ApplicationConstants.SEPARATOR_LIST);
-                inputsMap.put(inputName, WorkflowInput.ofList(Arrays.asList(values)));
+                inputsMap.put(inputName, WorkflowInput.ofList(List.of(values)));
             } else {
                 inputsMap.put(inputName, WorkflowInput.ofList(List.of(valuesStr)));
             }
@@ -164,7 +164,7 @@ public class WorkflowLaunchBusiness extends CommonBusiness {
         }
         mailContent += "\n\nException:" + e.getMessage() + "\nStacktrace: " + e.getStackTrace();
         try {
-            emailBusiness.sendEmailToAdmins(mailSubject, mailContent, true, user.getEmail());
+            emailBusiness.sendEmailToAdmins(mailSubject, mailContent, true, getUser().getEmail());
         } catch (VipException ex) {
             logger.error("Error sending the email informing of an execution launch error. Ignoring as there is already an exception going on", ex);
             // ignoring as there is already an exception going on
